workong comments controller
